[gd_scene load_steps=2 format=2]

[ext_resource path="res://Skripte/Editoren/textedit.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
pause_mode = 2
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_left = 750.0
margin_top = 587.0
margin_right = 850.0
margin_bottom = 637.0
text = "Speichern"

[node name="TabContainer" type="TabContainer" parent="."]
margin_left = 14.0
margin_top = 17.0
margin_right = 720.0
margin_bottom = 661.0

[node name="Label" type="Label" parent="."]
margin_left = 738.324
margin_top = 41.3115
margin_right = 820.324
margin_bottom = 55.3115
text = "Funktionen:"

[node name="Zurueck" type="Button" parent="."]
margin_left = 875.0
margin_top = 587.0
margin_right = 981.0
margin_bottom = 636.0
text = "Zurück"

[node name="Speicherdialog" type="WindowDialog" parent="."]
margin_left = 69.0
margin_top = 124.0
margin_right = 278.0
margin_bottom = 219.0
window_title = "Änderungen speichern?"

[node name="Speicherdialogtext2" type="Label" parent="Speicherdialog"]
margin_left = 30.4998
margin_top = 19.95
margin_right = 180.5
margin_bottom = 33.95
text = "Änderungen speichern?"

[node name="Knopfcontainer" type="HBoxContainer" parent="Speicherdialog"]
margin_left = 31.4498
margin_top = 51.2501
margin_right = 181.45
margin_bottom = 71.2501

[node name="Nein" type="Button" parent="Speicherdialog/Knopfcontainer"]
margin_right = 73.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Nein"

[node name="Ja" type="Button" parent="Speicherdialog/Knopfcontainer"]
margin_left = 77.0
margin_right = 150.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Ja"

[node name="FunktionsScrollContainer" type="ScrollContainer" parent="."]
margin_left = 741.0
margin_top = 62.0
margin_right = 1005.0
margin_bottom = 560.0

[node name="FunktoinsContainer" type="VBoxContainer" parent="FunktionsScrollContainer"]
[connection signal="button_up" from="Button" to="." method="_on_Button_button_up"]
[connection signal="tab_changed" from="TabContainer" to="." method="_on_TabContainer_tab_changed"]
[connection signal="button_up" from="Zurueck" to="." method="_on_Zurueck_button_up"]
[connection signal="button_up" from="Speicherdialog/Knopfcontainer/Nein" to="." method="_on_nicht_speichern"]
[connection signal="button_up" from="Speicherdialog/Knopfcontainer/Ja" to="." method="_on_Speicherdialog_speichern"]
